--- a/prelude-to-data.Rmd
+++ b/prelude-to-data.Rmd
@@ -21,17 +21,35 @@ source("knitr_tweaks.R")
 library(lsr,quietly = TRUE)
 ```
 
-When teaching statistics and data analysis, there is a school of thought that argues that the student should be introduced to actual data as quickly as possible. In one sense I've broken that rule rather substantially. The entirety the *core toolkit* section went by without any real data, much less any data analysis.  
+When teaching statistics and data analysis, there is a school of thought that argues that the student should be introduced to actual data as quickly as possible. In one sense I've broken that rule rather substantially. The entirety the *core toolkit* section went by without any real data, much less any data analysis. In my defence, data analysis was never the intended goal of that section. My hope with that section was to teach enough programming concepts that you'd be able to implement a psychological model in R, as we did with the [Rescorla-Wagner model](./programming.html) previously. 
 
+In this section I'm going to shift the focus to data analysis. I won't talk much about statistical inference about data (that will come in a later section) though. Instead we'll cover topics like tidying data, summarising data and visualising data. As the focus is now explicitly on data, I'll now work with real data. 
+
+## Attendance at the football
+
+The data I'll look at first is one that I put together as part of the *Learning Statistics with R* book. It consists of information about every game of Australian Rules Football (AFL) played between 1987 and 2010. The data are available in the [afl.csv](./data/afl.csv) file. Let's load the data set and take a look at it:
 
 ```{r, message = FALSE, warning = FALSE, fig.width=7}
 library(tidyverse)
 afl <- read_csv("./data/afl.csv")
 afl
+```
 
-pic <- afl %>% 
+For the moment let's not worry too much about what this code is doing or what the output means. The gist of the output is pretty clear. We have information about 4296 games. For each game we have the names of the home and away team, the number of points scored by each team, the date the game was played, the venue where it was played, the official attendance statistics, and whether it was a regular home-and-away game or part of the finals series. 
+
+How do I extract meaningful information out of this data set? Let's say my goal is to investigate how the average attendance at AFL games has changed over the years, and I'd like to look at regular season games separate from finals. To do so, I first summarise the AFL data in terms of the relevant variables: 
+
+```{r, message = FALSE, warning = FALSE, fig.width=7}
+attendance <- afl %>% 
   group_by(year, game_type) %>% 
-  summarise(attendance = mean(attendance)) %>%
+  summarise(attendance = mean(attendance)) 
+attendance
+```
+
+This summary contains the information I need, but it's a lot easier to understand if I turn it into a pretty picture. Again, I can do that with a short command:
+
+```{r, message = FALSE, warning = FALSE, fig.width=7}
+pic <- attendance %>%
   ggplot(aes(x = year, y = attendance)) + 
   facet_wrap(~game_type) +
   geom_point() + 
@@ -39,61 +57,42 @@ pic <- afl %>%
 plot(pic)
 ```
 
+It is only at this point the data speak for themselves. Attendance at home and away games (right panel) rose smoothly from 1987 to 2010. For finals games (left panel) the attendance is higher throughout but the trend is different. Average attendance declined somewhat until about 2004 and then rose thereafter. Noting that, a data analyst would be prompted to investigate further. 
+
+My goal in this section is to introduce the R tools that I used in this analysis. So before going into any of the details about data analysis in R, I'll comment on a few things going on in the code I've shown above.
+
 ## The tidyverse
 
 The first line of code in the AFL example is `library(tidyverse)`. Per the description on the [tidyverse](https://www.tidyverse.org/) website,
 
 > The tidyverse is an opinionated collection of R packages designed for data science. All packages share an underlying design philosophy, grammar, and data structures. 
 
+When I wrote *Learning Statistics with R* to accompany my first statistics class the tidyverse didn't play much of a part, because most of it didn't exist. Over the last several years the tidyverse has had a huge influence on how data analysis in R is typically conducted, so in these notes I'll very often rely on tools from the tidyverse. 
 
 ## Reading CSV data
 
-The second line 
+In the second line of code I use the `read_csv` function to import the data into R. The command is this one:
 
-```{r,eval=FALSE}
+```{r, eval=FALSE}
 afl <- read_csv("./data/afl.csv")
 ```
 
+The raw data itself is stored as a *comma separated value* (CSV) file, a plain text file in which each row represents a single game, with values separated by commas. The screenshot below shows the raw data file open in a text editor:
 
-One quite commonly used data format is the humble “comma separated value” file, also called a CSV file, and usually bearing the file extension `.csv`. CSV files are just plain old-fashioned text files, and what they store is basically just a table of data. This is illustrated in the screenshot below, which shows a file called `booksales.csv` that I’ve created. As you can see, each row corresponds to a variable, and each row represents the book sales data for one month. The first row doesn’t contain actual data though: it has the names of the variables.
+<img src="./img/csv_afl.png" width=800px>
 
-<img src="./img/csv_file.png" width=800px>
+So what this line of code does is import the data from the text file shown in the screen shot, assign it to a variable called `afl`. The format of this AFL variable looks rather like a table, and is an example of an R data formay known as a **tibble**. Later we'll talk more about tibbles, and the closely related **data frame**. For now, let’s just be happy that we imported the data and that it looks about right.
 
-If Rstudio were not available to you, the easiest way to open this file would be to use the `read.csv` function. This function is pretty flexible, and I’ll talk a lot more about it’s capabilities in a later chapter, but for now there’s only two arguments to the function that I’ll mention:
+One thing I will mention is that RStudio provides a nice point-and-click method for importing CSV data. Go to the environment pane, select the "import data set" and then choose "from text (readr)", like so^[**readr** is the name of the particular tidyverse package that supplies the `read_csv` function. There is a `read.csv` function that comes with R, but I've come to prefer the tidyverse version.] 
 
-- `file`. This should be a character string that specifies a path to the file that needs to be loaded. You can use an absolute path or a relative path to do so.
-- `header`. This is a logical value indicating whether or not the first row of the file contains variable names. The default value is `TRUE`.
 
-So, if the current working directory is the `Rbook` folder, and the `booksales.csv` file is in the `Rbook\data` folder, the command I would need to use to load it is:
+<img src="./img/csv_import1.png" width=300px>
 
-```{r}
-books <- read.csv(file = "./data/booksales.csv")
-```
+After selecting the file you want to import, RStudio will present you with an import data window that looks like this:
 
-There are two important points to notice here. Firstly, notice that I didn’t try to use the `load` function, because that function is only meant to be used for `.Rdata` files. If you try to use `load` on other types of data, you get an error. Secondly, notice that when I imported the CSV file I assigned the result to a variable, which I imaginatively called `books`.^[Note that I didn’t to this in my earlier example when loading the `.Rdata` file. There’s a reason for this. The idea behind an `.Rdata` file is that it stores a whole *workspace*. So, if you had the ability to look inside the file yourself you’d see that the data file keeps track of all the variables and their names. So when you `load` the file, R restores all those original names. CSV files are treated differently: as far as R is concerned, the CSV only stores one variable, but that variable is big table. So when you import that table into the workspace, R expects you to give it a name.] Let’s have a look at what we’ve got:
+<img src="./img/csv_import2.png" width=800px>
 
-```{r}
-print(books)
-```
-
-Clearly, it’s worked, but the format of this output is a bit unfamiliar. We haven’t seen anything like this before. What you’re looking at is a *data frame*, which is a very important kind of variable in R, and one I’ll discuss later in this chapter. For now, let’s just be happy that we imported the data and that it looks about right.
-
-Yet again, it’s easier in Rstudio. In the environment panel in Rstudio you should see a button called “Import Dataset”. Click on that, and it will give you a couple of options: 
-
-<img src="./img/csv_import1.png" width=400px>
-
-Select the “From Text File (base)...” option, and it will open up a very familiar dialog box asking you to select a file: if you’re on a Mac, it’ll look like the usual Finder window that you use to choose a file; on Windows it looks like an Explorer window. I’m assuming that you’re familiar with your own computer, so you should have no problem finding the CSV file that you want to import! Find the one you want, then open it. When you do this, you’ll see a window that looks like the one below:
-
-<img src="./img/csv_import2.png" width=600px>
-
-The import data set window is relatively straightforward to understand. In the top left corner, you need to type the name of the variable you R to create. By default, that will be the same as the file name: our file is called booksales.csv, so Rstudio suggests the name booksales. If you’re happy with that, leave it alone. If not, type something else. Immediately below this are a few things that you can tweak to make sure that the data gets imported correctly:
-
-- `Heading`. Does the first row of the file contain raw data, or does it contain headings for each variable? The `booksales.csv` file has a header at the top, so I selected “yes”.
-- `Separator`. What character is used to separate different entries? In most CSV files this will be a comma (it is “comma separated” after all). But you can change this if your file is different.
-- `Decimal`. What character is used to specify the decimal point? In English speaking countries, this is almost always a period (i.e., `.`). That’s not universally true: many European countries use a comma. So you can change that if you need to.
-- `Quote`. What character is used to denote a block of text? That’s usually going to be a double quote mark. It is for the `booksales.csv` file, so that’s what I selected.
-
-The nice thing about the Rstudio window is that it shows you the raw data file at the top of the window, and it shows you a preview of the data at the bottom. If the data at the bottom doesn’t look right, try changing some of the settings on the left hand side. Once you’re happy, click “Import”. When you do, you'll see the `read.csv` command appear in the console, along with a `View(booksales)` command that will open up a visual display of the `booksales` data set.
+This should look fairly familiar to anyone who has imported data from other software such as Excel or SPSS. I won't use that method in these notes because it's easier to type `read_csv` but it's worth noting that the option is there.
 
 
 ## Pipe operator, `%>%`
