--- a/xx-introductory-statistics.Rmd
+++ b/xx-introductory-statistics.Rmd
@@ -18,6 +18,7 @@ output:
 ```{r,echo=FALSE}
 rm(list=objects()) # start with a clean workspace
 source("knitr_tweaks.R")
+library(tidyverse,quietly = TRUE)
 ```
 
 
