--- a/prelude-to-data.Rmd
+++ b/prelude-to-data.Rmd
@@ -15,10 +15,11 @@ output:
     ]
 ---
 
-```{r,echo=FALSE}
+```{r,echo=FALSE,message = FALSE, warning = FALSE}
 rm(list=objects()) # start with a clean workspace
 source("knitr_tweaks.R")
 library(lsr,quietly = TRUE)
+library(tidyverse,quietly = TRUE)
 ```
 
 When teaching statistics and data analysis, there is a school of thought that argues that the student should be introduced to actual data as quickly as possible. In one sense I've broken that rule rather substantially. The entirety the *core toolkit* section went by without any real data, much less any data analysis. In my defence, data analysis was never the intended goal of that section. My hope with that section was to teach enough programming concepts that you'd be able to implement a psychological model in R, as we did with the [Rescorla-Wagner model](./programming.html) previously. 
@@ -69,7 +70,7 @@ The first line of code in the AFL example is `library(tidyverse)`. Per the descr
 
 > The tidyverse is an opinionated collection of R packages designed for data science. All packages share an underlying design philosophy, grammar, and data structures. 
 
-When I wrote *Learning Statistics with R* to accompany my first statistics class the tidyverse didn't play much of a part, because most of it didn't exist. Over the last several years the tidyverse has had a huge influence on how data analysis in R is typically conducted, so in these notes I'll very often rely on tools from the tidyverse. 
+When I wrote *Learning Statistics with R* to accompany my first statistics class the tidyverse didn't play much of a part, because most of it didn't exist. Over the last several years the tidyverse has had a huge influence on how data analysis in R is typically conducted, so in these notes I'll very often rely on tools from the tidyverse. From now on, when reading the code presented in these notes you should presume that there's a hidden `library(tidyverse)` command at the start of every page... because there is! `r emo::ji("grinning")`
 
 ## Reading a CSV file
 
