--- a/xx-visualising-data.Rmd
+++ b/xx-visualising-data.Rmd
@@ -18,6 +18,7 @@ output:
 ```{r,echo=FALSE}
 rm(list=objects()) # start with a clean workspace
 source("knitr_tweaks.R")
+library(tidyverse,quietly = TRUE)
 ```
 
 > Above all else show the data. <br>
